--- a/views/sass/_custom.scss
+++ b/views/sass/_custom.scss
@@ -378,3 +378,11 @@ table.definition {
         margin-left: 0;
     }
 }
+
+.source-credits a {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word;
+}
